Fix width overflow on mobile

--- a/tower-web/src/assets/variables.scss
+++ b/tower-web/src/assets/variables.scss
@@ -12,6 +12,7 @@ $thin-grey: #dee2e6;
 
 $body-background: #f8f9fa;
 $sidebar-width: 22rem;
+$sidebar-collapsed-width: 4rem;
 $sidebar-background: #f8f9fa;
 $sidebar-border: 1px solid $thin-grey;
 
