--- a/tower-web/src/styles.scss
+++ b/tower-web/src/styles.scss
@@ -45,7 +45,6 @@ code {
 }
 
 #sidebar {
-  top: 62px;
   max-width: 100%;
   background-color: $sidebar-background;
   overflow-x: hidden;
@@ -53,7 +52,15 @@ code {
 }
 
 #central {
-  min-width: 100%;
+
+}
+@media (max-width: 960px) {
+  #layout {
+    overflow-x: hidden;
+  }
+  #central {
+    width: calc(100% - #{$sidebar-collapsed-width});
+  }
 }
 
 #notification-container {
